Corrected the URL and added more comments

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         data-height="450px" data-border_radius="5px" data-loading_color="#E5E6E8" data-bounce_color="#16233f"
         data-append_url_params="true"></iframe>
 
-    <!-- Source: https://github.com/4site-interactive-studios/4site-wordpress-promotions -->
+    <!-- Source: https://github.com/4site-interactive-studios/en-multistep-embedded -->
+    <!-- NOTE: The javascript should be inlined if the embed is visible on page load and is part of the render critical initial paint -->
     <script defer="defer"
         src="https://cdn.jsdelivr.net/gh/4site-interactive-studios/en-multistep-embedded/dist/donation-multistep-parent.js"></script>
 </body>
