--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         }
 
         .iframe-wrapper {
-            background: green;
+            background-color: #ffffff;
             justify-content: center;
         }
 
         .iframe-wrapper iframe {
-            background-color: white;
-            max-width: 100%;
+            max-width: 601px;
+            height: 1392px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -33,13 +33,11 @@
 </head>
 
 <body>
-    <iframe width='100%' scrolling='no' class='en-iframe '
-        data-src='https://protect.worldwildlife.org/page/61117/donate/1' frameborder='0' allowfullscreen=''
-        style='display:none' allow='autoplay; encrypted-media' allowpaymentrequest="true" crossorigin></iframe>
-
-    <!-- <iframe id="dm-iframe" data-src="https://protect.worldwildlife.org/page/51145/donate/1" data-form_color="#f26722"
-        data-height="400px" data-border_radius="5px" data-loading_color="#E5E6E8" data-bounce_color="#16233f"
-        data-append_url_params="true"></iframe> -->
+    <div class="iframe-wrapper">
+        <iframe width='100%' scrolling='no' class='en-iframe'
+            data-src='https://protect.worldwildlife.org/page/61117/donate/1' frameborder='0' allowfullscreen=''
+            style='display:none' allow='autoplay; encrypted-media' allowpaymentrequest="true" crossorigin></iframe>
+    </div>
 
     <script>
         function getFrameByEvent(event) {
