--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         }
 
         .iframe-wrapper {
-            background-color: #ffffff;
             justify-content: center;
         }
 
@@ -27,6 +26,9 @@
             height: 1392px;
             margin-left: auto;
             margin-right: auto;
+            background-color: rgb(255, 255, 255);
+            outline: 1px solid #cccccc;
+            outline-offset: -1px;
         }
     </style>
 
