--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <style>
         body {
-            padding: 2rem;
             background: #f2f1ed;
             min-height: 800px;
         }
@@ -37,10 +36,12 @@
 
         .blue {
             background: blue;
+            margin-bottom: 2rem;
         }
 
         .red {
             background: red;
+            margin-top: 2rem;
         }
 
 
