--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         body {
             background: #f2f1ed;
             min-height: 800px;
+            margin: 0;
         }
 
         .iframe-wrapper {
